# GetBhavCopy

./: .gitignore  .pre-commit-config.yaml  BhavCopy.py  CONTRIBUTING.md  GetBhavCopy.py  README.md  SECURITY.md  SaveDirPath.json  build.spec  pyproject.toml  requirements.txt  temp.ipynb  temp.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-exe.yml
DATA/: 2026-02-05_2026-02-05_bhavcopy.txt  2026-02-13_2026-02-13_bhavcopy.txt
docs/: index.html
src/: BhavCopy.py  GetBhavCopy.py  GetBhavCopyold.py
src/getbhavcopy/: __init__,py  __init__.py  __main__.py  config.py  core.py  holidays.py  logging_config.py  notifications.py  scheduler.py  settings_windows.py  ui.py
tests/: test_getbhavcopy.py
