[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "getbhavcopy"
version = "0.1.0"
description = "GetBhavCopy downloader (NSE equity + indices)"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
fix = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
strict_optional = false
