[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "getbhavcopy"
dynamic = ["version"]
description = "GetBhavCopy downloader (NSE equity + indices)"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "types-requests",
  "pandas",
  "pandas-stubs",
  "customtkinter>=5.2.2",
  "certifi",
  "pytest-cov",
]

[tool.setuptools.dynamic]
version = {attr = "getbhavcopy.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=getbhavcopy --cov-report=term-missing --cov-fail-under=20"
pythonpath = ["src"]

[project.optional-dependencies]
windows = ["winotify"]
